Refine log table schema design, add StringUtils.isBlank, and update ErrorLogMessage
- decision: evaluated normal log table schema structure with field classification and storage considerations
- decision: discussed log versioning approach (major version focus, optional minor)
- feat: added StringUtils.isBlank utility method for null/blank string check
- refactor: minor adjustments to ErrorLogMessage to improve handling and representation

---

일반 로그 테이블 스키마 설계 검토, StringUtils.isBlank 추가, ErrorLogMessage 수정

- 결정: 필드 분류 및 저장 방식을 고려한 일반 로그 테이블 스키마 구조 검토
- 결정: 로그 버저닝 방식을 major 버전 중심으로, 필요시 minor 버전 사용 고려
- 기능: null/blank 문자열 검사를 위한 StringUtils.isBlank 유틸리티 메서드 추가
- 리팩터: ErrorLogMessage의 처리 및 표현 개선을 위한 소규모 수정